--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,14 @@
     <!-- TrustBox script -->
     <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
     <!-- End TrustBox script -->
+    <script>
+      // add service worker
+      // console.log("try to add service worker")
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker
+          .register('./sw.js')
+          .then(() => { console.log('Service Worker Registered'); });
+      }
+      </script>
   </body>
 </html>
