--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="icon" href="%PUBLIC_URL%/apple-touch-icon-150x150-precomposed.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="IPERCash web app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="description" content="ipercash.io/Achat, vente et retrait de cryptomonnaie par Mobile Money au Sénégal, Cameroun, Mali, Burkina Faso, et en Côte d’Ivoire et Guinée. Transfert d’argent mobile money" />
+  <meta name="author" content="IPERCASH" />
+  <meta name="copyright" content="IPERCASH" />
+  <meta name="robots" content="index"/>
+  <meta name="google-site-verification" content="tLNxNvQMU_oyulQujjaYVDlrEAgJKeq8fp9EfEzBgbQ" />
+	<link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon-120x120-precomposed.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,12 +26,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>IPERCash</title>
+  <title>IPERCASH: achat vente retrait envoie crypto mobile money</title>
 </head>
 
 <body>
   <!-- <script src="https://widget.mercuryo.io/embed.2.0.js"></script> -->
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Vous devez avoir activer javascript afin d'executer cette application.</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
@@ -40,9 +44,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  <!-- <script src="https://apps.elfsight.com/p/platform.js" defer></script> -->
   <!-- TrustBox script -->
-  <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+  <script  src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
   <!-- End TrustBox script -->
   <script>
     // add service worker
@@ -73,7 +77,7 @@
     fbq('init', '1508236659550127');
     fbq('track', 'PageView');
   </script>
-  <noscript><img height="1" width="1" style="display:none"
+  <noscript><img height="1" width="1" style="display:none" alt="icone-f"
       src="https://www.facebook.com/tr?id=1508236659550127&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
 
@@ -103,8 +107,8 @@
   </script>
   <!-- End Twitter universal website tag code -->
 
-	<!-- cinetpay script -->
-	<script src="https://cdn.cinetpay.com/seamless/main.js"></script>
+  <!-- cinetpay script -->
+  <script src="https://cdn.cinetpay.com/seamless/main.js"></script>
 
 </body>
 
