--- a/public/index.html
+++ b/public/index.html
@@ -2,113 +2,129 @@
 <html lang="fr">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/apple-touch-icon-150x150-precomposed.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="ipercash.io/Achat, vente et retrait de cryptomonnaie par Mobile Money au Sénégal, Cameroun, Mali, Burkina Faso, et en Côte d’Ivoire et Guinée. Transfert d’argent mobile money" />
-  <meta name="author" content="IPERCASH" />
-  <meta name="copyright" content="IPERCASH" />
-  <meta name="robots" content="index"/>
-  <meta name="google-site-verification" content="tLNxNvQMU_oyulQujjaYVDlrEAgJKeq8fp9EfEzBgbQ" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#ffffff" />
+	<meta name="description"
+		content="ipercash.io/Achat, vente et retrait de cryptomonnaie par Mobile Money au Sénégal, Cameroun, Mali, Burkina Faso, et en Côte d’Ivoire et Guinée. Transfert d’argent mobile money" />
+	<meta name="author" content="IPERCASH" />
+	<meta name="copyright" content="IPERCASH" />
+	<meta name="robots" content="index" />
+	<meta name="google-site-verification" content="tLNxNvQMU_oyulQujjaYVDlrEAgJKeq8fp9EfEzBgbQ" />
+	<meta name="twitter:card" content="summary" />
+
+	<meta property="og:url" content="http://www.ipercash.io" />
+	<meta property="og:title" content="Achat vente crypto-monnaie envoie retrait mobile money" />
+	<meta property="og:image" content="https://ipercash.io/static/media/enseigne.7177814f.png" />
+	<meta property="og:site_name"
+		content="www.ipercash.io/Achat et ventes de crypto-monnaies, transfert d'argent via Mobile Money" />
+	<meta property="og:type" content="site web IPERCash" />
+
+	<link rel="icon" href="%PUBLIC_URL%/apple-touch-icon-150x150-precomposed.png" />
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon-120x120-precomposed.png" />
-  <!--
+	<link rel="canonical" href="https://www.ipercash.io">
+	<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>IPERCASH: achat vente retrait envoie crypto mobile money</title>
+	<title>IPERCASH: achat vente retrait envoie crypto mobile money</title>
+
+
+	<!-- Google Tag Manager -->
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-54Q65ZK');</script>
+	<!-- End Google Tag Manager -->
 </head>
 
 <body>
-  <!-- <script src="https://widget.mercuryo.io/embed.2.0.js"></script> -->
-  <noscript>Vous devez avoir activer javascript afin d'executer cette application.</noscript>
-  <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+	<!-- <script src="https://widget.mercuryo.io/embed.2.0.js"></script> -->
+	<noscript>Vous devez avoir activer javascript afin d'executer cette application.</noscript>
+	<div id="root"></div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+	<!-- <script src="https://apps.elfsight.com/p/platform.js" defer></script> -->
+	<!-- TrustBox script -->
+	<script src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+	<!-- End TrustBox script -->
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
-  <!-- <script src="https://apps.elfsight.com/p/platform.js" defer></script> -->
-  <!-- TrustBox script -->
-  <script  src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
-  <!-- End TrustBox script -->
-  <script>
-    // add service worker
-    // console.log("try to add service worker")
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker
-        .register('./sw.js')
-        .then(() => { console.log('Service Worker Registered'); });
-    }
-  </script>
+	<script>
+		// add service worker
+		// console.log("try to add service worker")
+		if ('serviceWorker' in navigator) {
+			navigator.serviceWorker
+				.register('./sw.js')
+				.then(() => { console.log('Service Worker Registered'); });
+		}
+	</script>
 
 
+	<!-- pixel code -->
+	<!-- Meta Pixel Code -->
+	<script>
+		!function (f, b, e, v, n, t, s) {
+			if (f.fbq) return; n = f.fbq = function () {
+				n.callMethod ?
+					n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+			};
+			if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+			n.queue = []; t = b.createElement(e); t.async = !0;
+			t.src = v; s = b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t, s)
+		}(window, document, 'script',
+			'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '1508236659550127');
+		fbq('track', 'PageView');
+	</script>
 
-  <!-- pixel code -->
-  <!-- Meta Pixel Code -->
-  <script>
-    !function (f, b, e, v, n, t, s) {
-      if (f.fbq) return; n = f.fbq = function () {
-        n.callMethod ?
-          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-      };
-      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-      n.queue = []; t = b.createElement(e); t.async = !0;
-      t.src = v; s = b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t, s)
-    }(window, document, 'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1508236659550127');
-    fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none" alt="icone-f"
-      src="https://www.facebook.com/tr?id=1508236659550127&ev=PageView&noscript=1" /></noscript>
-  <!-- End Meta Pixel Code -->
+	<noscript>
+		<img height="1" width="1" style="display:none" alt="icone-f"
+			src="https://www.facebook.com/tr?id=1508236659550127&ev=PageView&noscript=1" />
+	</noscript>
+	<!-- End Meta Pixel Code -->
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-222885814-1">
-  </script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-222885814-1"></script>
 
-    gtag('config', 'UA-222885814-1');
-  </script>
-  <!-- End Google Analytics code -->
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-  <!-- Twitter universal website tag code -->
-  <script>
-    !function (e, t, n, s, u, a) {
-      e.twq || (s = e.twq = function () {
-        s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
-      }, s.version = '1.1', s.queue = [], u = t.createElement(n), u.async = !0, u.src = '//static.ads-twitter.com/uwt.js',
-        a = t.getElementsByTagName(n)[0], a.parentNode.insertBefore(u, a))
-    }(window, document, 'script');
-    // Insert Twitter Pixel ID and Standard Event data below
-    twq('init', 'o83pf');
-    twq('track', 'PageView');
-  </script>
-  <!-- End Twitter universal website tag code -->
+		gtag('config', 'UA-222885814-1');
+	</script>
 
-  <!-- cinetpay script -->
-  <script src="https://cdn.cinetpay.com/seamless/main.js"></script>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript>
+		<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54Q65ZK" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe>
+	</noscript>
+	<!-- End Google Tag Manager (noscript) -->
+
+	<!-- End Google Analytics code -->
+
+	<!-- Twitter universal website tag code -->
+	<script>
+		!function (e, t, n, s, u, a) {
+			e.twq || (s = e.twq = function () {
+				s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
+			}, s.version = '1.1', s.queue = [], u = t.createElement(n), u.async = !0, u.src = '//static.ads-twitter.com/uwt.js',
+				a = t.getElementsByTagName(n)[0], a.parentNode.insertBefore(u, a))
+		}(window, document, 'script');
+		// Insert Twitter Pixel ID and Standard Event data below
+		twq('init', 'o83pf');
+		twq('track', 'PageView');
+	</script>
+	<!-- End Twitter universal website tag code -->
+
+	<!-- cinetpay script -->
+	<script src="https://cdn.cinetpay.com/seamless/main.js"></script>
 
 </body>
 
