--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     -->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-	<title>Acheter et vendre la cryptomonnaie par Mobile Money , Sepa ou Carte de credit</title>
+	<title>Acheter et vendre la cryptomonnaie par Mobile Money, Sepa ou Visa</title>
 
 
 	<!-- Google Tag Manager -->
